--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1></h1>
+    <h1 class="title">FizzBuzzDOM</h1>
     
     <main class="content main_page">
 
