--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1 class="title">FizzBuzzDOM</h1>
+    <div class="container">
+        <h1 class="title">FizzBuzzDOM</h1>
+
+    </div>
     
     <main class="content main_page">
 
